laba3 demo 4